[gd_scene load_steps=2 format=3 uid="uid://flappytutorial"]

[ext_resource type="Script" uid="uid://flappytutorialscript" path="res://flappy_dino/FlappyTutorial.gd" id="1"]

[node name="FlappyTutorial" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.8)

[node name="TutorialPanel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -150.0
offset_top = -100.0
offset_right = 150.0
offset_bottom = 100.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBox" type="VBoxContainer" parent="TutorialPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 15
alignment = 1

[node name="Title" type="Label" parent="TutorialPanel/VBox"]
layout_mode = 2
text = "üê¶ FLAPPY DINO TUTORIAL"
horizontal_alignment = 1

[node name="Instructions" type="Label" parent="TutorialPanel/VBox"]
layout_mode = 2
text = "Tap anywhere to make the bird fly up.
Pass through the green gap in the pipes!

üéÆ CONTROLS:
‚Ä¢ Tap anywhere to flap
‚Ä¢ Space/Enter on keyboard
‚Ä¢ Avoid hitting pipes or ground"
horizontal_alignment = 1

[node name="GotItButton" type="Button" parent="TutorialPanel/VBox"]
layout_mode = 2
text = "Got it! Let's Play"

[node name="SkipButton" type="Button" parent="TutorialPanel/VBox"]
layout_mode = 2
text = "Skip Tutorial"